website/css/style.css
@import "pico.min.css";
@import "breezedark.css";

/* Orange Light scheme (Default) */
/* Can be forced with data-theme="light" */
[data-theme="light"],
:root:not([data-theme="dark"]) {
  --primary: #fb8c00;
  --primary-hover: #f57c00;
  --primary-focus: rgba(251, 140, 0, 0.125);
  --primary-inverse: #FFF;
}

/* Orange Dark scheme (Auto) */
/* Automatically enabled if user has Dark mode enabled */
@media only screen and (prefers-color-scheme: dark) {
  :root:not([data-theme="light"]) {
    --primary: #fb8c00;
    --primary-hover: #ff9800;
    --primary-focus: rgba(251, 140, 0, 0.25);
    --primary-inverse: #FFF;
  }
}

/* Orange Dark scheme (Forced) */
/* Enabled if forced with data-theme="dark" */
[data-theme="dark"] {
  --primary: #fb8c00;
  --primary-hover: #ff9800;
  --primary-focus: rgba(251, 140, 0, 0.25);
  --primary-inverse: #FFF;
}

/* Orange (Common styles) */
:root {
  --form-element-active-border-color: var(--primary);
  --form-element-focus-color: var(--primary-focus);
  --switch-color: var(--primary-inverse);
  --switch-checked-background-color: var(--primary);
  --spacing: 0.5rem;
  --border-radius: 0;
}

h1 a:hover {
  text-decoration: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  --typography-spacing-vertical: 0.5rem;
}

article {
  --block-spacing-horizontal: calc(var(--spacing)*4);
}

pre {
  background-color: #0d1419;
}

